--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -14,6 +14,9 @@
         <link rel="stylesheet" href="/css/main.css">
         <!-- endbuild -->
 
+        <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+        <script src="http://modernizr.com/downloads/modernizr-latest.js"></script>
+
     </head>
     <body>
 
