--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -1,5 +1,3 @@
-@import "susy";
-
 @import "compass";
 @import "compass/css3";
 @import "compass/utilities";
@@ -9,6 +7,5 @@
 @import "m5bp";
 @import "normalize";
 
-
-@import "_susypaf.scss";
+@import "_susyConfig.scss";
 
