--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -28,20 +28,8 @@
 
           {{ content }}
 
-          <div class="footer">
-            <div class="contact">
-              <p>
-                Gabriel Quiros<br />
-                <a href="mailto:gabrielq@criticalmass.com">gabrielq@criticalmass.com</a>
-              </p>
-            </div>
-            <div class="contact">
-              <p>
-                <a href="https://github.com/yourusername">github.com/yourusername</a><br />
-                <a href="https://twitter.com/yourusername">twitter.com/yourusername</a><br />
-              </p>
-            </div>
-          </div>
+          {% include paf.html %}
+
         </div>
 
     <!-- build:js(app) /js/scripts.js -->
