progress in serpento

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -21,12 +21,11 @@
     <body>
 
         <div class="site">
-          <div class="header">
-            <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-            <a class="extra" href="/">home</a>
-          </div>
+          {% include header.html %}
 
-          {{ content }}
+          <section id="container-js" class="container">
+            {{ content }}
+          </section>
 
           {% include footer.html %}
 
