--- a/app/_includes/footer.html
+++ b/app/_includes/footer.html
@@ -1,1 +1,9 @@
-saico
+<footer class="footer">
+    <ul>
+        <li>Home</li>
+        <li>Vote</li>
+        <li>Videos</li>
+        <li>Photos</li>
+        <li>News</li>
+    </ul>
+</footer>
