Progress on header

--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -1,14 +1,24 @@
-<header class="header">
-    <div class="menu-button" id="toggle-menu-js">MENU</div>
-    Header Graphic Here
+<header>
+  <section>
+    <div class="container headerTop">
+      <div class="socialNetworks">
+        <span>Siguenos en:</span>
+        <ul>
+          <li><a href="#"><i class="ico ico-facebook"></i>facebook</a></li>
+          <li><a href="#"><i class="ico ico-twitter ico-text"></i>twitter</a></li>
+          <li><a href="#"><i class="ico ico-gplus ico-text"></i>google plus</a></li>
+        </ul>
+      </div>
+      <div class="location"></div>
+    </div>
+  </section>
+  <nav class="menu">
+      <ul>
+          <li>Home</li>
+          <li>Vote</li>
+          <li>Videos</li>
+          <li>Photos</li>
+          <li>News</li>
+      </ul>
+  </nav>
 </header>
-
-<nav class="menu">
-    <ul>
-        <li>Home</li>
-        <li>Vote</li>
-        <li>Videos</li>
-        <li>Photos</li>
-        <li>News</li>
-    </ul>
-</nav>
