--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -23,9 +23,9 @@
         <div class="site">
           {% include header.html %}
 
-          <section id="container-js" class="container">
+          <div class="container">
             {{ content }}
-          </section>
+          </div>
 
           {% include footer.html %}
 
