--- a/app/_scss/_variables.scss
+++ b/app/_scss/_variables.scss
@@ -19,3 +19,6 @@ $alternate-background: #f5f5f5;
 // main font font-family
 $main-font: 'Helvetica Neue', Helvetica, Arial, sans-serif; 
 
+//base font size
+$base-font-size: 1.6em;
+
