--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -7,5 +7,9 @@
 @import "m5bp";
 @import "normalize";
 
-@import "_susyConfig.scss";
+@import "_variables.scss";
+@import "_base.scss";
+@import "_layout.scss";
+@import "_header.scss";
+@import "_sprites.scss";
 
