--- a/app/css/main.css
+++ b/app/css/main.css
@@ -523,3 +523,165 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+/*
+ * Base styles
+ */
+body {
+  font-size: 10px;
+  background: #ffffff;
+}
+
+h1, h2, h3, h4, h5, h6, p, ul {
+  color: black;
+}
+
+h1 {
+  color: black;
+  font-size: 4.5em;
+  font-family: 'HelveticaNeue-CondensedBold', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+h1 > sup {
+  font-size: 25%;
+  top: -1.8em;
+}
+
+h2 {
+  font-size: 2.571428571em;
+  font-weight: 200;
+  margin-bottom: 0.222222222em;
+}
+
+h3 {
+  font-size: 2em;
+}
+
+h4 {
+  font-size: 1.714285714em;
+}
+
+h5 {
+  font-size: 1.285714286em;
+}
+
+h6 {
+  font-size: 1em;
+}
+
+p {
+  margin-bottom: 1.428571em;
+}
+
+a {
+  color: #7db701;
+}
+a:hover {
+  color: #7db701;
+  text-decoration: underline;
+}
+
+hr {
+  margin: 2.142857143em 0;
+  border-top: 0.071428571em solid #e0e0e0;
+}
+
+table {
+  table-layout: fixed;
+  width: 100%;
+}
+
+.lt-ie8 ul {
+  padding-left: 1.142857143em;
+}
+.lt-ie8 li {
+  vertical-align: top;
+}
+
+.container {
+  color: black;
+  font-size: 1.6em;
+  *zoom: 1;
+  max-width: 50.75em;
+  _width: 50.75em;
+  padding-left: 1em;
+  padding-right: 1em;
+  margin-left: auto;
+  margin-right: auto;
+}
+.container:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.headerTop {
+  background-color: black;
+  border-bottom: 1px solid #292929;
+}
+
+.ico {
+  background-image: url('../img/ico-s7d851f27dc.png');
+  background-repeat: no-repeat;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.ico-facebook {
+  background-position: -44px 0;
+  height: 19px;
+  width: 18px;
+}
+
+.ico-gplus {
+  background-position: -26px 0;
+  height: 19px;
+  width: 18px;
+}
+
+.ico-gt-down {
+  background-position: 0 0;
+  height: 9px;
+  width: 15px;
+}
+
+.ico-gt-small {
+  background-position: -15px 0;
+  height: 16px;
+  width: 11px;
+}
+
+.ico-gt {
+  background-position: -80px 0;
+  height: 20px;
+  width: 11px;
+}
+
+.ico-logo {
+  background-position: 0 -40px;
+  height: 26px;
+  width: 217px;
+}
+
+.ico-ribbon-base {
+  background-position: -107px 0;
+  height: 40px;
+  width: 13px;
+}
+
+.ico-ribbon-point {
+  background-position: -91px 0;
+  height: 40px;
+  width: 16px;
+}
+
+.ico-twitter {
+  background-position: -62px 0;
+  height: 19px;
+  width: 18px;
+}
+
+.ico-text {
+  display: inline-block;
+  overflow: hidden;
+  text-indent: -99999px;
+}
