Progress in header

--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -1,12 +1,12 @@
 <header>
-  <section>
-    <div class="container headerTop">
-      <div class="socialNetworks">
+  <section class="header-top">
+    <div class="container header-top-content">
+      <div class="social-networks">
         <span>Siguenos en:</span>
-        <ul>
-          <li><a href="#"><i class="ico ico-facebook"></i>facebook</a></li>
-          <li><a href="#"><i class="ico ico-twitter ico-text"></i>twitter</a></li>
-          <li><a href="#"><i class="ico ico-gplus ico-text"></i>google plus</a></li>
+        <ul class="social-networks-list">
+          <li><a href="#"><i class="ico ico-facebook ico-text">facebook</i></a></li>
+          <li><a href="#"><i class="ico ico-twitter ico-text">twitter</i></a></li>
+          <li><a href="#"><i class="ico ico-gplus ico-text">google plus</i></a></li>
         </ul>
       </div>
       <div class="location"></div>
