--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -1,24 +1,26 @@
 <header>
-  <section>
-    <div class="container headerTop">
-      <div class="socialNetworks">
-        <span>Siguenos en:</span>
+    <section>
+        <div class="container headerTop">
+            <div class="socialNetworks">
+                <span>Siguenos en:</span>
+                <ul>
+                    <li><a href="#"><i class="ico ico-facebook"></i>facebook</a></li>
+                    <li><a href="#"><i class="ico ico-twitter ico-text"></i>twitter</a></li>
+                    <li><a href="#"><i class="ico ico-gplus ico-text"></i>google plus</a></li>
+                </ul>
+            </div>
+            <div class="location"></div>
+        </div>
+    </section>
+    <nav class="menu">
+        <h1><i class="ico ico-logo ico-text">Serpento</i></h1>
         <ul>
-          <li><a href="#"><i class="ico ico-facebook"></i>facebook</a></li>
-          <li><a href="#"><i class="ico ico-twitter ico-text"></i>twitter</a></li>
-          <li><a href="#"><i class="ico ico-gplus ico-text"></i>google plus</a></li>
+            <li>Motocicletas</li>
+            <li>Accesorios</li>
+            <li>Donde comprar</li>
+            <li>Talleres</li>
+            <li>Acerca</li>
+            <li>Contacto</li>
         </ul>
-      </div>
-      <div class="location"></div>
-    </div>
-  </section>
-  <nav class="menu">
-      <ul>
-          <li>Home</li>
-          <li>Vote</li>
-          <li>Videos</li>
-          <li>Photos</li>
-          <li>News</li>
-      </ul>
-  </nav>
+    </nav>
 </header>
