--- a/app/css/main.css
+++ b/app/css/main.css
@@ -677,6 +677,13 @@ table {
 
 .header-bottom {
   background-color: #101010;
+  *zoom: 1;
+  filter: progid:DXImageTransform.Microsoft.gradient(gradientType=0, startColorstr='#FF101010', endColorstr='#FF000000');
+  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #101010), color-stop(100%, #000000));
+  background-image: -webkit-linear-gradient(top, #101010 0%, #000000 100%);
+  background-image: -moz-linear-gradient(top, #101010 0%, #000000 100%);
+  background-image: -o-linear-gradient(top, #101010 0%, #000000 100%);
+  background-image: linear-gradient(top, #101010 0%, #000000 100%);
 }
 
 .menu > li {
