Progress in top bar

--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -9,7 +9,11 @@
                     <li><a href="#"><i class="ico ico-gplus ico-text">google plus</i></a></li>
                 </ul>
             </div>
-            <div class="location"></div>
+            <div class="location">
+                <span>Actualmente en:</span>
+                <span class="current-location">San Pedro, San Jose</span>
+                <a href="">Buscar Punto de Venta</a>
+            </div>
         </div>
     </section>
     <nav class="menu">
