--- a/app/_scss/_variables.scss
+++ b/app/_scss/_variables.scss
@@ -16,6 +16,9 @@ $highlight-color: #ffc000;
 //alternate background color
 $alternate-background: #f5f5f5;
 
+//alternate inverted color
+$alternate-inverted-color: #7f7f7f;
+
 // main font font-family
 $main-font: 'Helvetica Neue', Helvetica, Arial, sans-serif; 
 
