--- a/app/css/main.css
+++ b/app/css/main.css
@@ -617,7 +617,8 @@ p {
 }
 
 a {
-  color: #7db701;
+  color: black;
+  text-decoration: none;
 }
 a:hover {
   color: #7db701;
@@ -661,25 +662,46 @@ table {
 .header-top {
   background-color: black;
   border-bottom: 1px solid #292929;
+  padding: 1em 0;
 }
 
+.header-top-content {
+  overflow: hidden;
+}
+.header-top-content > .social-networks {
+  float: left;
+}
 .header-top-content > .social-networks > span {
+  color: #7f7f7f;
   display: inline-block;
+  font-size: 0.8125em;
+}
+.header-top-content > .location {
+  float: right;
+  font-size: 0.8125em;
+  line-height: 1.384615385em;
+}
+.header-top-content > .location > span {
+  color: #7f7f7f;
+}
+.header-top-content > .location > span.current-location {
+  color: #FFFFFF;
+  margin-right: 1.230769231em;
+}
+.header-top-content > .location > a {
+  border-left: 1px solid #292929;
+  color: #ffc000;
+  display: inline-block;
+  padding-left: 1.230769231em;
 }
 
 .social-networks-list {
   display: inline-block;
   margin-bottom: 0;
+  margin-left: 0.1875em;
 }
 .social-networks-list > li {
   display: inline-block;
-}
-
-.test {
-  width: 23.72881%;
-  float: left;
-  margin-right: 1.69492%;
-  display: inline;
 }
 
 .ico {
