--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -15,13 +15,13 @@
     <nav class="header-bottom">
         <div class="container">
             <h1 class="logo"><i class="ico ico-logo ico-text">Serpento</i></h1>
-            <ul class="menu">
-                <li>Motocicletas</li>
-                <li>Accesorios</li>
-                <li>Donde comprar</li>
-                <li>Talleres</li>
-                <li>Acerca</li>
-                <li>Contacto</li>
+            <ul class="menu-list">
+                <li><a href="#">Motocicletas</a></li>
+                <li><a href="#">Accesorios</a></li>
+                <li><a href="#">Donde comprar</a></li>
+                <li><a href="#">Talleres</a></li>
+                <li><a href="#">Acerca</a></li>
+                <li><a href="#">Contacto</a></li>
             </ul>
         </div>
     </nav>
