progress in header

--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -20,7 +20,7 @@
         <div class="container">
             <h1 class="logo"><i class="ico ico-logo ico-text">Serpento</i></h1>
             <ul class="menu-list">
-                <li><a href="#">Motocicletas</a></li>
+                <li><a class="active" href="#">Motocicletas</a></li>
                 <li><a href="#">Accesorios</a></li>
                 <li><a href="#">Donde comprar</a></li>
                 <li><a href="#">Talleres</a></li>
