--- a/app/css/main.css
+++ b/app/css/main.css
@@ -705,6 +705,8 @@ table {
 }
 
 .header-bottom {
+  overflow: hidden;
+  *zoom: 1;
   background-color: #101010;
   *zoom: 1;
   filter: progid:DXImageTransform.Microsoft.gradient(gradientType=0, startColorstr='#FF101010', endColorstr='#FF000000');
@@ -714,27 +716,41 @@ table {
   background-image: -o-linear-gradient(top, #101010 0%, #000000 100%);
   background-image: linear-gradient(top, #101010 0%, #000000 100%);
 }
+.header-bottom > .container {
+  padding: 1.5em 0 0;
+}
 
 .logo {
-  width: 32.20339%;
   float: left;
-  margin-right: 1.69492%;
-  display: inline;
+  font-size: 1em;
+  line-height: 1em;
+  margin-bottom: 0;
 }
 
 .menu-list {
-  width: 66.10169%;
+  overflow: hidden;
+  *zoom: 1;
   float: right;
-  margin-right: 0;
-  *margin-left: -1em;
-  display: inline;
+  margin-bottom: 0;
 }
 .menu-list > li {
   list-style: none;
+  float: left;
+  padding: 0 0.375em;
+  text-align: center;
 }
 .menu-list a {
   color: #ffffff;
+  display: inline-block;
+  font-size: 0.75em;
   text-decoration: none;
+  text-transform: uppercase;
+  padding: 0 1.5em;
+}
+.menu-list a.active {
+  border-bottom: 0.33333em solid #ffc000;
+  color: #ffc000;
+  padding-bottom: 2.333333333em;
 }
 
 .test {
