--- a/app/_includes/footer.html
+++ b/app/_includes/footer.html
@@ -1,9 +1,31 @@
 <footer class="footer">
-    <ul>
-        <li>Home</li>
-        <li>Vote</li>
-        <li>Videos</li>
-        <li>Photos</li>
-        <li>News</li>
-    </ul>
+    <div class="container">
+        <div class="copyright">
+            <a href="#" class="logo"><i class="ico ico-logo ico-text">Serpento</i></a>
+            <p class="copyright-text">Copyright 2014 - Todos los derechos reservados</p>
+            <p class="grupo-monge">Grupo Monge Costa Rica</p>
+        </div>
+        <div class="menu-accessibility">
+            <ul class="footer-list-products footer-list">
+                <li class="title"><a href="#">Productos</a></li>
+                <li class="active"><a href="#">Motocicletas</a></li>
+                <li><a href="#">Accesorios</a></li>
+                <li><a href="#">Donde Comprar</a></li>
+                <li><a href="#">Talleres</a></li>
+            </ul>
+            <ul class="footer-list-company footer-list">
+                <li class="title"><a href="#">Compañía</a></li>
+                <li><a href="#">Acerca</a></li>
+                <li><a href="#">Contacto</a></li>
+                <li><a href="#">Sitemap</a></li>
+                <li><a href="#">Grupo Monge</a></li>
+            </ul>
+            <ul class="footer-list-follow-us footer-list">
+                <li class="title"><a href="#">Siguenos</a></li>
+                <li><a href="#">Facebook</a></li>
+                <li><a href="#">Twitter</a></li>
+                <li><a href="#">Google+</a></li>
+            </ul>
+        </div>
+    </div>
 </footer>
