--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -18,7 +18,7 @@
     </section>
     <nav class="header-bottom">
         <div class="container">
-            <h1 class="logo"><i class="ico ico-logo ico-text">Serpento</i></h1>
+            <a href="#" class="logo"><i class="ico ico-logo ico-text">Serpento</i></a>
             <ul class="menu-list">
                 <li><a class="active" href="#">Motocicletas</a></li>
                 <li><a href="#">Accesorios</a></li>
