--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -23,7 +23,7 @@
         <div class="site">
           {% include header.html %}
 
-          <div class="container">
+          <div>
             {{ content }}
           </div>
 
