--- a/app/_scss/_base.scss
+++ b/app/_scss/_base.scss
@@ -2,7 +2,7 @@
 
 $total-columns: 12;
 $column-width: 4em;
-$gutter-width: 1em;
+$gutter-width: 1.25em;
 $container-width: 1000px;
 
 /*
@@ -10,8 +10,10 @@ $container-width: 1000px;
  */
 
 body {
-    font-size: 10px;
     background: #ffffff;
+    font-size: 10px;
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    min-width: 1000px;
 }
 
 h1, h2, h3, h4, h5, h6, p, ul {
