--- a/app/_includes/home/main-banner.html
+++ b/app/_includes/home/main-banner.html
@@ -1,7 +1,10 @@
 <section class="main-banner has-rotated">
     <div class="rotate rotate-right alternate-background rotate-top">
-        <div class="rotate-left">
-            <div class="col2"></div>
+        <div class="rotate-left container">
+            <div class="col2 main-banner-content">
+                <h1>Lorem ipsum dolor sit</h1>
+                <ul></ul>
+            </div>
             <div class="col2-last"></div>
         </div>
     </div>
