--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -12,6 +12,7 @@
 
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/css/main.css">
+        <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:900' rel='stylesheet' type='text/css'>
         <!-- endbuild -->
 
         <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
